--- a/gallery.html
+++ b/gallery.html
@@ -39,31 +39,31 @@
             <div class="hero">
                 <div class="carousel">
                     <ul>
-                        <li><img src="gallery/img1.png"></li>
-                        <li><img src="gallery/img2.png"></li>
-                        <li><img src="gallery/img3.png"></li>
-                        <li><img src="gallery/img4.png"></li>
-                        <li><img src="gallery/img5.png"></li>
-                        <li><img src="gallery/img6.png"></li>
-                        <li><img src="gallery/img7.png"></li>
-                        <li><img src="gallery/img8.png"></li>
-                        <li><img src="gallery/img9.png"></li>
-                        <li><img src="gallery/img10.png"></li>
-                        <li><img src="gallery/img11.png"></li>
-                        <li><img src="gallery/img12.png"></li>
-                        <li><img src="gallery/img13.png"></li>
-                        <li><img src="gallery/img14.png"></li>
-                        <li><img src="gallery/img15.png"></li>
-                        <li><img src="gallery/img16.png"></li>
-                        <li><img src="gallery/img17.png"></li>
-                        <li><img src="gallery/img18.png"></li>
-                        <li><img src="gallery/img19.png"></li>
-                        <li><img src="gallery/img20.png"></li>
-                        <li><img src="gallery/img21.png"></li>
-                        <li><img src="gallery/img22.png"></li>
-                        <li><img src="gallery/img23.png"></li>
-                        <li><img src="gallery/img24.png"></li>
-                        <li><img src="gallery/img25.png"></li>
+                        <li><img src="gallery/img1.PNG"></li>
+                        <li><img src="gallery/img2.PNG"></li>
+                        <li><img src="gallery/img3.PNG"></li>
+                        <li><img src="gallery/img4.PNG"></li>
+                        <li><img src="gallery/img5.PNG"></li>
+                        <li><img src="gallery/img6.PNG"></li>
+                        <li><img src="gallery/img7.PNG"></li>
+                        <li><img src="gallery/img8.PNG"></li>
+                        <li><img src="gallery/img9.PNG"></li>
+                        <li><img src="gallery/img10.PNG"></li>
+                        <li><img src="gallery/img11.PNG"></li>
+                        <li><img src="gallery/img12.PNG"></li>
+                        <li><img src="gallery/img13.PNG"></li>
+                        <li><img src="gallery/img14.PNG"></li>
+                        <li><img src="gallery/img15.PNG"></li>
+                        <li><img src="gallery/img16.PNG"></li>
+                        <li><img src="gallery/img17.PNG"></li>
+                        <li><img src="gallery/img18.PNG"></li>
+                        <li><img src="gallery/img19.PNG"></li>
+                        <li><img src="gallery/img20.PNG"></li>
+                        <li><img src="gallery/img21.PNG"></li>
+                        <li><img src="gallery/img22.PNG"></li>
+                        <li><img src="gallery/img23.PNG"></li>
+                        <li><img src="gallery/img24.PNG"></li>
+                        <li><img src="gallery/img25.PNG"></li>
                     </ul>
                 </div>
             </div>
