--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
         </section>
 
         <script>
-            var navLinks = document.getElementById("navLinks");
+            let navLinks = document.getElementById("navLinks");
             function showMenu() {
                 navLinks.style.display = "block";
             }
@@ -164,7 +164,7 @@
         <button id="returnToTop" title="Return To Top">&uarr;</button>
         <script>
             document.addEventListener("DOMContentLoaded", function() {
-                const returnToTopButton = document.getElementById("returnToTop");
+                let returnToTopButton = document.getElementById("returnToTop");
                 window.onscroll = function() {
                     if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
                         returnToTopButton.style.display = "block";
