--- a/gallery.html
+++ b/gallery.html
@@ -88,7 +88,7 @@
         </script>
 
         <script>
-            var navLinks = document.getElementById("navLinks");
+            let navLinks = document.getElementById("navLinks");
             function showMenu() {
                 navLinks.style.display = "block";
             }
@@ -108,7 +108,7 @@
         <button id="returnToTop" title="Return To Top">&uarr;</button>
         <script>
             document.addEventListener("DOMContentLoaded", function() {
-                const returnToTopButton = document.getElementById("returnToTop");
+                let returnToTopButton = document.getElementById("returnToTop");
                 window.onscroll = function() {
                     if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
                         returnToTopButton.style.display = "block";
