--- a/leadership.html
+++ b/leadership.html
@@ -1,4 +1,4 @@
-<html>
+<html>https://github.com/notifications
     <head>
         <meta name="viewport" content="with=device-width, initial-scale=1.0">
         <title>Texas A&M Water Ski Team - Leadership</title>
@@ -8,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="icon" href="icons/favicon.png">
+        <meta name="robots" content="noindex">
     </head>
     <body>
         <section class="leadershipHeader">
