--- a/about.html
+++ b/about.html
@@ -8,6 +8,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="icon" href="icons/favicon.png">
+        <meta name="description" content="Join the Texas A&M University Water Ski Team! Our purpose is to promote interest in water skiing among the 
+            students, faculty, and staff of TAMU. Compete in 3-event water skiing (slalom, trick, and jump) in the South Central Region, or 
+            enjoy recreational skiing at our lake in Iola, TX. All skill levels are welcome! Learn more about our practices, events, 
+            and membership benefits, including equipment discounts and tournament travel. Discover the thrill of collegiate water skiing 
+            with us—meetings every Tuesday at 8 p.m. in Room 1132 of the Student Recreation Center.">
     </head>
     <body>
         <section class="aboutHeader">
