--- a/join.html
+++ b/join.html
@@ -8,6 +8,12 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="icon" href="icons/favicon.png">
+        <meta name="description" content="Join the Texas A&M University Water Ski Team today! Whether you're a seasoned pro or new to 
+            the sport, our team welcomes you. Attend our meetings every Tuesday at 8 p.m. in Room 1132 of the Student 
+            Recreation Center to learn more. Complete necessary forms, enjoy a free trip to our lake, and pay dues to officially join. 
+            Participate in tournaments by completing additional requirements like the Driver's Agreement, USA Water Ski Membership, and 
+            SafeSport Training. Follow us on Instagram @aggiewaterski and Facebook @Texas A&M Waterski Club for updates. Discover the 
+            excitement of water skiing with us!">
     </head>
     <body>
         <section class="joinHeader">
