--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="icon" href="icons/favicon.png">
+        <meta name="description" content="Get in touch with the Texas A&M University Water Ski Team! Fill out our contact form, email 
+            us at texasamwaterski@gmail.com, or reach out to our officers through the Leadership page. Join our potential skiers GroupMe 
+            for updates, and follow us on Instagram @aggiewaterski and Facebook @Texas A&M Waterski Club for meeting times. Alumni can 
+            connect with us on the A&M Waterski Alumni Facebook group. We're here to answer any questions and welcome new members!">
     </head>
     <body>
         <section class="contactHeader">
