--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="jquery.flipster.min.css">
         <link rel="icon" href="icons/favicon.png">
-        <meta name="description" content="Explore the Texas A&M University Water Ski Team's gallery! Browse photos and videos from our 
+        <meta name="description" content="Explore the Texas A&M University Water Ski Team's gallery! Browse photos from our 
             practices, tournaments, and team events. See the excitement and camaraderie of our team in action, and get a glimpse of 
             what collegiate water skiing is all about. Join us and make memories on the water!">
     </head>
