--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="icon" href="icons/favicon.png">
+        <meta name="description" content="Welcome to the Texas A&M University Water Ski Team! Discover our vibrant community, dedicated 
+            to promoting water skiing among the students, faculty, and staff of TAMU. Learn about our practices, tournaments, and how to join. 
+            Whether you're an experienced skier or a beginner, we have a place for you. Stay updated on our latest news and events. Get involved today!">
     </head>
     <body>
         <section class="homeHeader">
