--- a/leadership.html
+++ b/leadership.html
@@ -8,6 +8,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="icon" href="icons/favicon.png">
+        <meta name="description" content="Meet the leaders of the Texas A&M University Water Ski Team! Our Leadership page introduces 
+            you to the dedicated officers who organize events, practices, and tournaments. Find contact information for each officer 
+            and learn more about their roles. Get in touch with our leadership team to ask questions, provide feedback, or get involved 
+            with the team.">
     </head>
     <body>
         <section class="leadershipHeader">
