--- a/leadership.html
+++ b/leadership.html
@@ -1,4 +1,4 @@
-<html>https://github.com/notifications
+<html>
     <head>
         <meta name="viewport" content="with=device-width, initial-scale=1.0">
         <title>Texas A&M Water Ski Team - Leadership</title>
