--- a/calendar.html
+++ b/calendar.html
@@ -36,7 +36,7 @@
             <p><br></p>
             <h1>Calendar</h1>
             <p><br></p>
-            <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FChicago&bgcolor=%23ffffff&mode=MONTH&title=Texas%20A%26M%20Water%20Ski%20Team&src=Y29saW5jbG91ZGFuQHRhbXUuZWR1&color=%23039BE5" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+            <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FChicago&bgcolor=%23ffffff&title=Texas%20A%26M%20Water%20Ski%20Team&src=Y181NmJhOTYwOGY1MWIzOWIwMTQ2OTJlNjU1YzU5N2JjYjhjN2M3ZmFmNjE1M2RmOTI2NGZmYzk5NzQ3NmFjYzQ5QGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23E4C441" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
             <p><br></p>
             <p><br></p>
         </section>
