--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
             <p>We are the official water ski team of Texas A&M University and our purpose is to promote interest in water skiing and 
                 its related activities among the students, faculty, and staff of TAMU. We are one of 38 sports clubs sponsored by the 
                 <a href="https://recsports.tamu.edu/">Texas A&M Department of Recreational Sports</a> and we meet every Tuesday at 8 
-                p.m. in Room 1132 of the <a href="https://maps.app.goo.gl/A9CrczcPv46fwwjQ9">Student Recreation Center</a>. Through <a 
+                p.m. in Room 1132 of the <a href="https://recsports.tamu.edu/facilities/student-rec-center/">Student Recreation Center</a>. Through <a 
                 href="https://www.usawaterski.org/">USA Water Ski</a> and the <a href="https://www.ncwsa.com/">National Collegiate Water 
                 Ski Association</a>, we compete in 3-event water skiing (slalom, trick, and jump) against other schools in the <a 
                 href="https://www.ncwsascr.org/">South Central Region</a>. These other schools include the University of Louisiana at 
