--- a/join.html
+++ b/join.html
@@ -46,7 +46,7 @@
             <p><br></p>
             <h2>Interested In Joining?</h2>
             <p>1. <b>Come to a meeting!</b> We meet every Tuesday at 8 p.m. in Room 1132 of the <a 
-                href="https://maps.app.goo.gl/A9CrczcPv46fwwjQ9">Student Recreation Center</a>. Come learn what collegiate water ski is 
+                href="https://recsports.tamu.edu/facilities/student-rec-center/">Student Recreation Center</a>. Come learn what collegiate water ski is 
                 all about! Make sure to follow our Instagram <a href="https://www.instagram.com/aggiewaterski/">@aggiewaterski</a> and 
                 our Facebook <a href="https://www.facebook.com/tamuwaterski/">@Texas A&M Waterski Club</a> where we will be posting our 
                 meeting times throughout the semester!</p>
